fixed some ruby versioning issue and got basic database connection working

--- a/views/list.erb
+++ b/views/list.erb
@@ -1,1 +1,34 @@
-hello
+<h1>Overview of movies</h1>
+<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+
+
+<div class="row">
+	<div class="col-md-6">
+  		<table class="table">
+
+    	<thead>
+      		<tr>
+        		<th>#</th>
+        		<th>Title</th>
+        		<th>Description</th>
+        		<th>Video</th>
+        		<th>Genre</th>
+      		</tr>
+    	</thead>
+
+    	<tbody>
+		<% @videos.each do |video| %>
+        	<tr>
+          		<td>video.id</td>
+         		<td>video.title</td>
+          		<td>video.description</td>
+            	<td>video.video_id</td>
+            	<td>video.genre</td>
+          	</tr>
+        <% end %>
+        </tbody>
+
+      </table>
+    </div>
+</div>
+
