completed overview page

--- a/views/list.erb
+++ b/views/list.erb
@@ -1,9 +1,8 @@
 <h1>Overview of movies</h1>
-<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<p class="lead">A collection of the best and latest videos curated by Meme Tube!</p>
 
-
-<div class="row">
-	<div class="col-md-6">
+<p>
+	<div class="row">
   		<table class="table">
 
     	<thead>
@@ -12,23 +11,27 @@
         		<th>Title</th>
         		<th>Description</th>
         		<th>Video</th>
-        		<th>Genre</th>
+        		<th width="150;"></th>
       		</tr>
     	</thead>
 
     	<tbody>
 		<% @videos.each do |video| %>
         	<tr>
-          		<td>video.id</td>
-         		<td>video.title</td>
-          		<td>video.description</td>
-            	<td>video.video_id</td>
-            	<td>video.genre</td>
+          		<td><%= video.id %></td>
+         		<td><b><%= video.title %></b></td>
+          		<td><%= video.description %> <h4><span class="label label-default"><%= video.genre %></span></h4></td>
+            	<td>
+					<object width="420" height="315" data="http://www.youtube.com/v/<%= video.video_id %>"></object>
+            	</td>
+            	<td align="right;">
+            		<button type="button" class="btn btn-sm btn-warning">Edit</button>
+            		<button type="button" class="btn btn-sm btn-danger">Delete</button>
+            	</td>
           	</tr>
         <% end %>
         </tbody>
 
       </table>
-    </div>
-</div>
-
+	</div>
+</p>
