--- a/views/list.erb
+++ b/views/list.erb
@@ -8,7 +8,7 @@
     	<thead>
       		<tr>
         		<th>#</th>
-        		<th>Title</th>
+        		<th width="100;">Title</th>
         		<th>Description</th>
         		<th>Video</th>
         		<th width="150;"></th>
