--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="css/starter-template.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -29,8 +29,18 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/list">List</a></li>
-            <li><a href="/add">Add</a></li>
+            <% if request.path_info == "/list" or request.path_info == "/" %> 
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+            <a href="/list">List</a></li>
+            <% if request.path_info == "/add" %>
+            <li class="active">
+            <% else %>
+            <li>
+            <% end %>
+            <a href="/add">Add</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
